[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "image-preprocessing"
version = "0.1.0"
description = "Reusable utilities for image preprocessing and dataset handling"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "numpy",
    "tensorflow",
    "scikit-learn",
    "plotly",
    "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
